fixed picture alignment

--- a/passport-photos-pictures/download-photo/download-photo.css
+++ b/passport-photos-pictures/download-photo/download-photo.css
@@ -7,7 +7,7 @@
     text-align: center;
 }
 
-canvas#myCanvas {
-    border: 1px solid grey;
-    width: 100%;
+#four-by-six-image {
+    max-width: 100%;
+    max-height: 100%;
 }
